--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
-        body, html {
+
+	body, html {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
@@ -63,6 +64,9 @@
             margin-bottom: 10px;
             padding: 10px;
             background-color: white;
+        }
+        .resource-generation {
+            margin-bottom: 20px;
         }
         .panel-title {
             font-weight: bold;
