--- a/styles.css
+++ b/styles.css
@@ -134,25 +134,25 @@
 }
 
         .upgrade-button {
-            display: inline-block;
-            width: 25px;
-            height: 25px;
-            margin: 5px;
-            padding: 0;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 50%;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            font-size: 12px;
-            line-height: 25px;
-            text-align: center;
-            overflow: hidden;
+  background-color: #111; /* Fundo preto */
+  border: 2px solid #0f0; /* Borda verde neon */
+  color: #0f0; /* Texto verde neon */
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  transition: 0.4s;
+  cursor: pointer;
+  border-radius: 12px;
+  box-shadow: 0 0 10px #0f0, 0 0 20px #0f0, 0 0 30px #0f0; /* Efeito neon */
+}
         }
 
 .upgrade-button:hover {
-    background-color: #45a049;
+  background-color: #0f0; /* Fundo verde neon */
+  color: #111; /* Texto preto */
 }
 
 .upgrade-button:disabled {
