--- a/styles.css
+++ b/styles.css
@@ -134,25 +134,24 @@
 }
 
         .upgrade-button {  
-  background-color: #111; /* Fundo preto */
-  border: 2px solid #0f0; /* Borda verde neon */
-  color: #0f0; /* Texto verde neon */
-  width: 60px; /* Largura */
+  background-color: #008CBA; /* Azul */
+  border: none;
+  color: white;
+  width: 100px; /* Largura */
   height: 60px; /* Altura */
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 16px; /* Tamanho da fonte */
+  font-size: 14px; /* Tamanho da fonte */
   margin: 4px 2px;
   transition: 0.4s;
   cursor: pointer;
   border-radius: 12px;
-  box-shadow: 0 0 10px #0f0, 0 0 20px #0f0, 0 0 30px #0f0; /* Efeito neon */
+  box-shadow: 0 9px #999;
         }
 
 .upgrade-button:hover {
-  background-color: #0f0; /* Fundo verde neon */
-  color: #111; /* Texto preto */
+background-color: #006f9a;
 }
 
 .upgrade-button:disabled {
