--- a/styles.css
+++ b/styles.css
@@ -93,12 +93,43 @@
         #clickable:active {
             transform: scale(0.95);
         }
-        button {
-            margin: 5px;
-            padding: 10px;
+        .button {
+            align-items: center;
+            background-color: #fff;
+            border-radius: 12px;
+            box-shadow: transparent 0 0 0 3px, rgba(18, 18, 18, .1) 0 6px 20px;
+            box-sizing: border-box;
+            color: #121212;
             cursor: pointer;
-            width: 180px;
+            display: inline-flex;
+            flex: 1 1 auto;
+            font-family: Inter, sans-serif;
+            font-size: 1.2rem;
+            font-weight: 700;
+            justify-content: center;
+            line-height: 1;
+            margin: 0;
+            outline: none;
+            padding: 1rem 1.2rem;
+            text-align: center;
+            text-decoration: none;
+            transition: box-shadow .2s, -webkit-box-shadow .2s;
+            white-space: nowrap;
+            border: 0;
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
         }
+
+        .button:hover {
+            box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
+        }
+
+        .button:active {
+            box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
+            background-color: #f0f0f0;
+        }
+
         .progress-bar {
             width: 100%;
             height: 20px;
