--- a/styles.css
+++ b/styles.css
@@ -86,9 +86,8 @@
             transition: transform 0.1s;
             margin-bottom: 20px;
  	    background-image: url(PC.jpeg);
-	    object-fit: cover;
-/*     	    background-size: cover; /* Para garantir que a imagem cubra todo o elemento
-/*    	    background-position: center;  Para centralizar a imagem  */
+		background-size: cover; 
+	background-position: center; 
 	    -webkit-tap-highlight-color: transparent;
     	    -webkit-touch-callout: none;
             -webkit-user-select: none;
@@ -180,31 +179,30 @@
 }
 
         .upgrade-button {  
-  appearance: none;
-  background-color: transparent;
-  border: 2px solid #1A1A1A;
-  border-radius: 15px;
-  box-sizing: border-box;
-  color: #3B3B3B;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  font-size: 16px;
-  font-weight: 600;
-  line-height: normal;
-  margin: 0;
-  min-height: 60px;
-  min-width: 0;
-  outline: none;
-  padding: 16px 24px;
-  text-align: center;
-  text-decoration: none;
-  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  width: 100%;
-  will-change: transform;
+appearance: none;
+background-color: transparent;
+border: 2px solid #1A1A1A;
+border-radius: 15px;
+box-sizing: border-box;
+color: #3B3B3B;
+cursor: pointer;
+display: inline-block;
+font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+font-size: 16px;
+font-weight: 600;
+line-height: normal;
+margin: 0;
+height: 60px; /* Define a altura para 60px */
+width: 100px; /* Define a largura para 100px */
+outline: none;
+padding: 16px 24px;
+text-align: center;
+text-decoration: none;
+transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+user-select: none;
+-webkit-user-select: none;
+touch-action: manipulation;
+will-change: transform;
         }
 
 .upgrade-button:hover {
