--- a/styles.css
+++ b/styles.css
@@ -186,14 +186,14 @@ border-radius: 15px;
 box-sizing: border-box;
 color: #3B3B3B;
 cursor: pointer;
-display: inline-block;
+display: flex;
 font-family: Roobert, -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 font-size: 16px;
 font-weight: 600;
 line-height: normal;
 margin: 0;
 height: 60px; /* Define a altura para 60px */
-width: 100px; /* Define a largura para 100px */
+width: 120px; /* Define a largura para 100px */
 outline: none;
 padding: 16px 24px;
 text-align: center;
@@ -215,6 +215,9 @@ will-change: transform;
 
 .upgrade-button:disabled {
   pointer-events: none;
+ color: #aaa; /* Cor do texto desativado */
+border-color: #aaa; /* Cor da borda desativada */
+background-color: #f0f0f0; 
 }
 
 
