--- a/styles.css
+++ b/styles.css
@@ -178,31 +178,40 @@
     text-align: right;
 }
 
-        .upgrade-button {
-            display: inline-block;
-            width: 25px;
-            height: 25px;
-            margin: 5px;
-            padding: 0;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 50%;
-            cursor: pointer;
-            transition: background-color 0.3s;
-            font-size: 12px;
-            line-height: 25px;
-            text-align: center;
-            overflow: hidden;
+ .upgrade-button {  
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid #1A1A1A;
+  border-radius: 15px;
+  box-sizing: border-box;
+  color: #3B3B3B;
+  cursor: pointer;
+  display: inline-block;
+  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
+  font-size: 16px;
+  font-weight: 600;
+  line-height: normal;
+  margin: 0;
+  min-height: 60px;
+  min-width: 0;
+  outline: none;
+  padding: 16px 24px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 100%;
+  will-change: transform;
         }
-
 .upgrade-button:hover {
-    background-color: #45a049;
+  color: #fff;
+  background-color: #1A1A1A;
+  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
+  transform: translateY(-2px);
 }
-
 .upgrade-button:disabled {
-    background-color: #cccccc;
-    cursor: not-allowed;
+  pointer-events: none;
 }
-
 
