--- a/styles.css
+++ b/styles.css
@@ -178,40 +178,27 @@
     text-align: right;
 }
 
- .upgrade-button {  
-  appearance: none;
-  background-color: transparent;
-  border: 2px solid #1A1A1A;
-  border-radius: 15px;
-  box-sizing: border-box;
-  color: #3B3B3B;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Roobert,-apple-system,BlinkMacSystemFont,"Segoe UI",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
-  font-size: 16px;
-  font-weight: 600;
-  line-height: normal;
-  margin: 0;
-  min-height: 60px;
-  min-width: 0;
-  outline: none;
-  padding: 16px 24px;
+        .upgrade-button {  
+  background-color: #008CBA; /* Azul */
+  border: none;
+  color: white;
+  width: 100px; /* Largura */
+  height: 60px; /* Altura */
   text-align: center;
   text-decoration: none;
-  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  width: 100%;
-  will-change: transform;
+  display: inline-block;
+  font-size: 14px; /* Tamanho da fonte */
+  margin: 4px 2px;
+  transition: 0.4s;
+  cursor: pointer;
+  border-radius: 12px;
+  box-shadow: 0 9px #999;
         }
 .upgrade-button:hover {
-  color: #fff;
-  background-color: #1A1A1A;
-  box-shadow: rgba(0, 0, 0, 0.25) 0 8px 15px;
-  transform: translateY(-2px);
+background-color: #006f9a;
 }
 .upgrade-button:disabled {
-  pointer-events: none;
+    background-color: #cccccc;
+    cursor: not-allowed;
 }
 
