--- a/styles.css
+++ b/styles.css
@@ -25,12 +25,30 @@
             flex-direction: column;
         }
         .resource-panel {
-            flex: 3;
-            background-color: #f0f0f0;
+            border: 1px solid #ccc;
+            margin: 10px;
             padding: 10px;
+        }
+
+
+        .resource-button {
+            margin: 5px 0;
+            padding: 10px;
+            background-color: #e0e0e0;
+            border: none;
+            cursor: pointer;
+            text-align: left;
+        }
+
+        .title-panel {
+            background-color: #f0f0f0;
+            padding: 5px;
+            margin-bottom: 10px;
+        }
+
+        .button-panel {
             display: flex;
             flex-direction: column;
-            overflow-y: auto;
         }
         .minigames-panel {
             flex: 1;
@@ -46,6 +64,19 @@
             align-items: center;
             padding: 10px;
         }
+        .button-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .button-info {
+            display: flex;
+            flex-direction: column;
+        }
+
+
+
         .upgrades-panel {
             flex: 1;
             background-color: #e0e0e0;
@@ -136,20 +167,37 @@
             background-color: #f0f0f0;
         }
 
-        .progress-bar {
+/*         .progress-bar {
             width: 100%;
             height: 20px;
             background-color: #e0e0e0;
             border-radius: 10px;
             overflow: hidden;
             margin-top: 5px;
+        } */
+
+        .progress-bar {
+            width: 100%;
+            background-color: #ddd;
+            margin-top: 5px;
         }
+
+
         .progress {
+            width: 0;
+            height: 10px;
+            background-color: #4CAF50;
+            transition: width 0.5s ease-in-out;
+        }
+
+
+
+/*         .progress {
             width: 0;
             height: 100%;
             background-color: #4CAF50;
             transition: width 0.1s;
-        }
+        } */
         .timer {
             font-size: 14px;
             color: #666;
