--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 :root {
-  --conhecimento-color: #00FFFF; /* Neon Blue */
-  --grana-color: #00FF00; /* Lime Green */
-  --codigo-color: #606060; /* Granite */
-  --dados-color: #FFBF00; /* Amber */
+  --conhecimento-color: #00008B; /* Neon Blue */
+  --grana-color: #008000; /* Lime Green */
+  --codigo-color: #0C090A; /* Granite */
+  --dados-color: #FFA500; /* Amber */
 }
 
 
