--- a/styles.css
+++ b/styles.css
@@ -216,7 +216,7 @@ body, html {
             transition: transform 0.1s;
             margin-bottom: 20px;
  	    background-image: url(PC.jpeg);
-		background-size: cover; 
+		background-size: contain; 
 	background-position: center; 
 	    -webkit-tap-highlight-color: transparent;
     	    -webkit-touch-callout: none;
