--- a/styles.css
+++ b/styles.css
@@ -230,6 +230,7 @@ body, html {
             transform: scale(0.95);
         }
         .ativ-button {
+	    margin: 0.5cm  
             align-items: center;
             background-color: #fff;
             border-radius: 12px;
@@ -246,7 +247,7 @@ body, html {
             line-height: 1;
             margin: 0;
             outline: none;
-            padding: 1rem 1.2rem;
+            padding: 0,5rem 1.2rem;
             text-align: center;
             text-decoration: none;
             transition: box-shadow .2s, -webkit-box-shadow .2s;
