--- a/styles.css
+++ b/styles.css
@@ -211,7 +211,7 @@ body, html {
 #clickable {
   width: 250px;
   height: 250px;
-  background-image: url(PC.jpeg);
+  background-image: url(PC2.png);
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
