--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 }
 
 /* Dados */
-#dadosGenerationpanel {
+#dadosGenerationPanel {
     background-image: url('Data.png');
     background-size: cover;
     background-position: center;
