--- a/styles.css
+++ b/styles.css
@@ -183,6 +183,20 @@ body, html {
     cursor: pointer;
     transition: background-color 0.3s;
     position: relative; /* Added for absolute positioning of the level */
+    opacity: 0.7;
+
+}
+        .resource-generation:hover {
+            background-color: #f5f5f5;
+        }
+        .resource-generation:active {
+            background-color: #e0e0e0;
+	    opacity: 1;
+        }
+
+.resource-generation.disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
 }
 
 .resource-generation p {
@@ -216,12 +230,7 @@ body, html {
     text-align: left; /* Align text to the left */
 }
 
-        .resource-generation:hover {
-            background-color: #f5f5f5;
-        }
-        .resource-generation:active {
-            background-color: #e0e0e0;
-        }
+
 
         .panel {
             border: 1px solid #ccc;
