--- a/styles.css
+++ b/styles.css
@@ -110,7 +110,7 @@ body, html {
         .left-column {
             display: flex;
             flex-direction: column;
-            width: 30%;
+            width: 22%;
         }
         .center-column {
             display: flex;
@@ -118,25 +118,20 @@ body, html {
             width: 45%;
         }
         .right-column {
-            width: 25%;
+            width: 33%;
             display: flex;
             flex-direction: column;
         }
         .resource-panel {
 /* 	    z-index: 1 */
-            flex: 3;
+            flex: 1;
             background-color: #c9c9c9;
             padding: 10px;
             display: flex;
             flex-direction: column;
             overflow-y: auto;
         }
-        .minigames-panel {
-            flex: 1;
-            background-color: #c9c9c9;
-            padding: 10px;
-            overflow-y: auto;
-        }
+
         .click-panel {
             flex: 2;
             display: flex;
@@ -144,14 +139,9 @@ body, html {
             justify-content: center;
             align-items: center;
             padding: 10px;
-	    background-color: #c9c9c9;
-        }
-        .upgrades-panel {
-            flex: 1;
             background-color: #c9c9c9;
-            padding: 10px;
-            overflow-y: auto;
         }
+
         .generation-panel {
 	
             border: 1px solid #ccc;
@@ -269,7 +259,7 @@ body, html {
         }
 
       
-#clickable {
+/* #clickable {
   width: 250px;
   height: 250px;
   background-image: url(PC2.png);
@@ -282,7 +272,22 @@ body, html {
   -webkit-tap-highlight-color: transparent;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
-}
+} */
+
+
+        #clickable {
+            width: 250px;
+            height: 250px;
+            background-image: url(PC2.png);
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+            cursor: pointer;
+            transition: transform 0.1s;
+            margin-bottom: 0.5cm;
+        }
+
+
 
 #clickable:active {
   transform: scale(0.95);
@@ -290,8 +295,27 @@ body, html {
         #clickable:active {
             transform: scale(0.95);
         }
-        .ativ-button {
-	    margin: 1.5cm  
+
+        .ativ-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 0.5cm;
+        }
+
+
+        .panel-geral {
+            position: absolute;
+            top: calc(22% + 10px);
+            left: 0;
+            width: 67%;
+            height: calc(78% - 10px);
+            background-color: #c9c9c9;
+            padding: 10px;
+            overflow-y: auto;
+        }
+
+
+    .ativ-button {
             align-items: center;
             background-color: #fff;
             border-radius: 12px;
@@ -300,15 +324,12 @@ body, html {
             color: #121212;
             cursor: pointer;
             display: inline-flex;
-            flex: 1 1 auto;
             font-family: Inter, sans-serif;
             font-size: 1.2rem;
             font-weight: 700;
             justify-content: center;
             line-height: 1;
-            margin: 0;
-            outline: none;
-            padding: 0,5rem 1.2rem;
+            padding: 0.5rem 1.2rem;
             text-align: center;
             text-decoration: none;
             transition: box-shadow .2s, -webkit-box-shadow .2s;
@@ -317,7 +338,6 @@ body, html {
             user-select: none;
             -webkit-user-select: none;
             touch-action: manipulation;
-            -webkit-tap-highlight-color: transparent;
         }
 	.ativ-button.active {
             box-shadow: #121212 0 0 0 3px, transparent 0 0 0 0;
